Update lib + Export Dependancy graph